modified:   Car Buying Guides.html 	modified:   Expert Advise.html 	modified:   Inspection Tools.html 	modified:   Thank you Page.html 	modified:   index.html

--- a/Thank you Page.html
+++ b/Thank you Page.html
@@ -85,10 +85,10 @@
     </br></br>
 
      <div id="navbar">
-        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html#"> Home </a>
+        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html"> Home </a>
         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Car%20Buying%20Guides.html"> Car Buying Guides </a>
         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Inspection%20Tools.html"> Inspection Tools </a>
-        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Expert%20Advise.html" id="active"> Expert Advise </a>       
+        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Expert%20Advise.html"> Expert Advise </a>       
         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Newsletter-Subscription.html"> Newsletter-Subscription </a>
     </div>
 
