--- a/Car Buying Guides.html
+++ b/Car Buying Guides.html
@@ -90,7 +90,7 @@
     </div>
 
     <div id="navbar">
-        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html#"> Home </a>
+        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html"> Home </a>
          <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Car%20Buying%20Guides.html"> Car Buying Guides </a>
         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Inspection%20Tools.html"> Inspection Tools </a>
         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Expert%20Advise.html"> Expert Advise </a>
