new file:   AudiSedan.jpg 	new file:   BGIMG1.jpg 	new file:   BGIMG2.jpg 	new file:   BGIMG4.jpg 	new file:   CarChassis.jpg 	new file:   CarDeal.jpg 	new file:   CarDocs.jpg 	new file:   CarElectrical.jpg 	new file:   CarEngine.jpg 	new file:   CarInside.jpg 	new file:   CarJunk.jpg 	new file:   CarMaintenance 1.jpg 	new file:   CarMaintenance 2.jpg 	new file:   CarMechanic.jpg 	new file:   CarOld.jpg 	new file:   CarUnderChassis.jpg 	new file:   CarVIN.jpg 	new file:   CarsTower.jpg 	new file:   ChevyGreen.jpg 	new file:   Ferrari.jpg 	modified:   Inspection Tools.html 	new file:   MonteroSnow.jpg 	new file:   RedCar.jpg 	new file:   RoadIntersect.jpg

--- a/Inspection Tools.html
+++ b/Inspection Tools.html
@@ -102,111 +102,138 @@
 
     <h5> Pre-Purchase Inspection Checklist: </h5>
 
-    <ol>
-        <li> Exterior Inspection: </li>
+    <div class="container">
+        <div class="content-section">
+          <div class="card">
+            <img src="AudiSedan.jpg" alt="Audi">
+            <h2> 1. Exterior Inspection:</h2>
+            <ul> 
+                <li> Body condition (dents, scratches, rust) </li>
+                <li> Paint quality </li>
+                <li> Glass and windows (cracks or chips) </li>
+                <li> Tires (tread depth, condition) </li>
+                <li> Wheels and rims </li>
+                <li> Lights (headlights, taillights, turn signals) </li>
+                <li> Bumpers and trim </li>
+            </ul>
+        </div>
+    </br> </br>
+        <div class="card">
+            <img src="ChevyGreen.jpg" alt="OldCar">
+            <h2> 2. Under the Hood:</h2>
+            <ul>
+                <li> Engine condition (leaks, unusual sounds) </li>
+                <li> Fluid levels (oil, coolant, brake fluid) </li>
+                <li> Battery condition </li>
+                <li> Belts and hoses </li>
+                <li> Radiator and cooling system </li>
+                <li> Air filter </li>
+            </ul>
+        </div>
+    </br> </br>
+    <div class="card">
+        <img src="CarInside.jpg" alt="CarInside">
+        <h2> 3. Interior Inspection:</h2>
         <ul> 
-            <li> Body condition (dents, scratches, rust) </li>
-            <li> Paint quality </li>
-            <li> Glass and windows (cracks or chips) </li>
-            <li> Tires (tread depth, condition) </li>
-            <li> Wheels and rims </li>
-            <li> Lights (headlights, taillights, turn signals) </li>
-            <li> Bumpers and trim </li>
+            <li> Seats and upholstery (tears, stains) </li>
+            <li> Dashboard and instrument panel </li>
+            <li> Controls and switches </li>
+            <li> Carpet and flooring </li>
+            <li> Odors (mold, smoke) </li>
+            <li> Headliner </li>
         </ul>
-    </br>
-
-    <li> Under the Hood: </li>
-    <ul> 
-        <li> Engine condition (leaks, unusual sounds) </li>
-        <li> Fluid levels (oil, coolant, brake fluid) </li>
-        <li> Battery condition </li>
-        <li> Belts and hoses </li>
-        <li> Radiator and cooling system </li>
-        <li> Air filter </li>
-    </ul>
-</br>
-
-<li> Interior Inspection: </li>
-    <ul> 
-        <li>Seats and upholstery (tears, stains)</li>
-        <li> Dashboard and instrument panel </li>
-        <li>Controls and switches </li>
-        <li> Carpet and flooring </li>
-        <li> Odors (mold, smoke) </li>
-        <li> Headliner </li>
-    </ul>
-</br>
-
-<li> Vehicle History and Documentation:</li>
-    <ul> 
-        <li>Review maintenance and service records</li>
-        <li>Check the title status (clean title, salvage, etc.) </li>
-        <li>Ensure the VIN matches the documents </li>
-        <li> Verify the mileage</li>
-    </ul>
-</br>
-
-<li> Test Drive:</li>
-    <ul> 
-        <li>Engine performance (acceleration, idling)</li>
-        <li> Steering and handling </li>
-        <li>Braking system (brake feel, responsiveness) </li>
-        <li> Transmission (smooth shifting) </li>
-        <li> Suspension and shocks (ride quality) </li>
-        <li> Noise and vibrations</li>
-    </ul>
-</br>
-
-<li> Electrical and Electronics:</li>
-    <ul> 
-        <li>Lights (interior and exterior)</li>
-        <li> Climate control and air conditioning</li>
-        <li>Audio and entertainment system</li>
-        <li>Power windows and locks </li>
-        <li>Wipers and washers </li>
-    </ul>
-</br>
-
-<li> Undercarriage Inspection:</li>
+    </div>
+</br> </br>    
+    <div class="card">
+        <img src="CarDocs.jpg" alt="CarDocs">
+        <h2> 4. Vehicle History and Documentation:</h2>
+        <ul> 
+            <li>Review maintenance and service records</li>
+            <li>Check the title status (clean title, salvage, etc.) </li>
+            <li>Ensure the VIN matches the documents </li>
+            <li> Verify the mileage</li>
+        </ul>
+    </div>      
+</br> </br>    
+    <div class="card">
+        <img src="RedCar.jpg" alt="RedCar">
+        <h2> 5. Test Drive:</h2>
+        <ul> 
+            <li>Engine performance (acceleration, idling)</li>
+            <li> Steering and handling </li>
+            <li>Braking system (brake feel, responsiveness) </li>
+            <li> Transmission (smooth shifting) </li>
+            <li> Suspension and shocks (ride quality) </li>
+            <li> Noise and vibrations</li>
+        </ul>
+    </div>      
+</br> </br>    
+    <div class="card">
+        <img src="CarElectrical.jpg" alt="CarElectrical">
+        <h2> 6. Electrical and Electronics:</h2>
+        <ul> 
+            <li>Lights (interior and exterior)</li>
+            <li> Climate control and air conditioning</li>
+            <li>Audio and entertainment system</li>
+            <li>Power windows and locks </li>
+            <li>Wipers and washers </li>
+        </ul>
+    </div>      
+</br> </br>    
+<div class="card">
+    <img src="CarUnderChassis.jpg" alt="CarUnderChassis">
+    <h2> 7. Undercarriage Inspection:</h2>
     <ul> 
         <li>Check for rust, corrosion, or damage to the undercarriage</li>
         <li>Exhaust system condition</li>
         <li>Suspension components (struts, shocks, control arms) </li>
     </ul>
-</br>
-
-<li> Fluid Analysis:</li>
+</div>      
+</br> </br>    
+<div class="card">
+    <img src="CarEngine.jpg" alt="CarEngine">
+    <h2> 8. Fluid Analysis:</h2>
     <ul> 
         <li>Consider having the engine oil and transmission fluid analyzed for signs of contamination or wear.</li>
     </ul>
-</br>
-
-<li> Vehicle Identification Number (VIN) Check:</li>
+</div>      
+</br> </br>    
+<div class="card">
+    <img src="CarVIN.jpg" alt="CarVIN">
+    <h2> 9. Vehicle Identification Number (VIN) Check:</h2>
     <ul> 
         <li>Confirm that the VIN matches the documentation and conduct a history check if possible.</li>
     </ul>
-</br>
-
-<li> Professional Inspection:</li>    
+</div>      
+</br> </br>    
+<div class="card">
+    <img src="CarMechanic.jpg" alt="CarMechanic">
+    <h2> 10. Professional Inspection:</h2>
     <ul> 
         <li>If unsure, consider having a professional mechanic or inspection service evaluate the car's condition.</li>
     </ul>
-</br>
-
-<li> Negotiation: </li>
+</div>     
+</br> </br>    
+<div class="card">
+    <img src="CarDeal.jpg" alt="CarDeal">
+    <h2> 11. Negotiation:</h2>
     <ul> 
         <li>Use the findings from the inspection to negotiate with the seller, either for a reduced price or necessary repairs.</li>
     </ul>
-</br>
-
-<li> Ongoing Maintenance Considerations: </li>
+</div>     
+</br> </br>    
+<div class="card">
+    <img src="CarMaintenance 1.jpg" alt="CarMaintenance">
+    <h2> 12. Ongoing Maintenance Considerations:</h2>
     <ul> 
         <li>Estimate potential maintenance or repair costs and factor them into your budget.</li>
     </ul>
-    </ol>
-</br>
+        </div>     
+    </div>
+</div>
 
-    <p> This checklist is designed to help users conduct a comprehensive evaluation of a used car's condition and history. It can be printed or used electronically during the inspection to ensure that no crucial aspects are overlooked.</p>
+</br>
+    <p> This checklist is designed to help users conduct a comprehensive evaluation of a used car's condition and history.</p>
 
 </div>
 
