modified:   Inspection Tools.html

--- a/Inspection Tools.html
+++ b/Inspection Tools.html
@@ -60,6 +60,20 @@
         padding-top: 60px;
     }
         
+    .content-section .card {
+        flex: 1;
+        margin:10px 10px;
+        box-shadow: 0px 2px 8px 0px rgba(0,0,0,0.2);
+        padding: 10px 10px 10px 10px;
+    }
+
+    .content-section .card h2 {
+        margin:15px 0px;
+        font-size: 28px;
+        color:#1662a1;
+        font-family: sans-serif;
+    }
+
             footer {
         background-color: #526899;
         text-align: left;
@@ -117,7 +131,7 @@
                 <li> Bumpers and trim </li>
             </ul>
         </div>
-    </br> </br>
+</br></br></br></br>
         <div class="card">
             <img src="ChevyGreen.jpg" alt="OldCar">
             <h2> 2. Under the Hood:</h2>
@@ -130,7 +144,7 @@
                 <li> Air filter </li>
             </ul>
         </div>
-    </br> </br>
+</br></br></br></br>
     <div class="card">
         <img src="CarInside.jpg" alt="CarInside">
         <h2> 3. Interior Inspection:</h2>
@@ -143,7 +157,7 @@
             <li> Headliner </li>
         </ul>
     </div>
-</br> </br>    
+</br></br></br></br>  
     <div class="card">
         <img src="CarDocs.jpg" alt="CarDocs">
         <h2> 4. Vehicle History and Documentation:</h2>
@@ -154,7 +168,7 @@
             <li> Verify the mileage</li>
         </ul>
     </div>      
-</br> </br>    
+</br></br></br></br>  
     <div class="card">
         <img src="RedCar.jpg" alt="RedCar">
         <h2> 5. Test Drive:</h2>
@@ -167,7 +181,7 @@
             <li> Noise and vibrations</li>
         </ul>
     </div>      
-</br> </br>    
+</br></br></br></br>
     <div class="card">
         <img src="CarElectrical.jpg" alt="CarElectrical">
         <h2> 6. Electrical and Electronics:</h2>
@@ -179,7 +193,7 @@
             <li>Wipers and washers </li>
         </ul>
     </div>      
-</br> </br>    
+</br></br></br></br>
 <div class="card">
     <img src="CarUnderChassis.jpg" alt="CarUnderChassis">
     <h2> 7. Undercarriage Inspection:</h2>
@@ -189,7 +203,7 @@
         <li>Suspension components (struts, shocks, control arms) </li>
     </ul>
 </div>      
-</br> </br>    
+</br></br></br></br>
 <div class="card">
     <img src="CarEngine.jpg" alt="CarEngine">
     <h2> 8. Fluid Analysis:</h2>
@@ -197,7 +211,7 @@
         <li>Consider having the engine oil and transmission fluid analyzed for signs of contamination or wear.</li>
     </ul>
 </div>      
-</br> </br>    
+</br></br></br></br> 
 <div class="card">
     <img src="CarVIN.jpg" alt="CarVIN">
     <h2> 9. Vehicle Identification Number (VIN) Check:</h2>
@@ -205,7 +219,7 @@
         <li>Confirm that the VIN matches the documentation and conduct a history check if possible.</li>
     </ul>
 </div>      
-</br> </br>    
+</br></br></br></br>  
 <div class="card">
     <img src="CarMechanic.jpg" alt="CarMechanic">
     <h2> 10. Professional Inspection:</h2>
@@ -213,7 +227,7 @@
         <li>If unsure, consider having a professional mechanic or inspection service evaluate the car's condition.</li>
     </ul>
 </div>     
-</br> </br>    
+</br></br></br></br> 
 <div class="card">
     <img src="CarDeal.jpg" alt="CarDeal">
     <h2> 11. Negotiation:</h2>
@@ -221,7 +235,7 @@
         <li>Use the findings from the inspection to negotiate with the seller, either for a reduced price or necessary repairs.</li>
     </ul>
 </div>     
-</br> </br>    
+</br></br></br></br>
 <div class="card">
     <img src="CarMaintenance 1.jpg" alt="CarMaintenance">
     <h2> 12. Ongoing Maintenance Considerations:</h2>
