modified:   Thank you Page.html

--- a/Thank you Page.html
+++ b/Thank you Page.html
@@ -79,7 +79,7 @@
 </head>
 <body>
     <div class="header">
-        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html"> <img style="float: left;" width="100px" height="100px" src="Logo.png" alt="Website Logo"> </a>
+        <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html" img style="float: left;" width="100px" height="100px" src="Logo.png" alt="Website Logo"> </a>
         
      </div>
     </br></br>
