modified:   index.html 	modified:   style.css

--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
   <div>
     <ul>
       <h4 style="text-align: left;"> Legal Information </h4>
-        <li style="text-align: left;"> <a href="#"> Privacy Policy </a> </li>
-        <li style="text-align: left;"> <a href="#"> Terms and Conditions </a> </li>
+        <li style="text-align: left;">  Privacy Policy </li>
+        <li style="text-align: left;">  Terms and Conditions </li>
   
     </div>
 
