modified:   Car Buying Guides.html 	modified:   Expert Advise.html 	modified:   Inspection Tools.html 	modified:   Sign-up Form.html 	modified:   index.html

--- a/Car Buying Guides.html
+++ b/Car Buying Guides.html
@@ -85,16 +85,16 @@
 </head>
 <body>
     <div class="header">
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html"> <img style="float: left;" width="100px" height="100px" src="Logo.png" alt="Website Logo"> </a>
+         <a href="index.html"> <img style="float: left;" width="100px" height="100px" src="Logo.png" alt="Website Logo"> </a>
          <h2 style="text-align: center; font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;"> Car Buying Guides </h2>
     </div>
 
     <div id="navbar">
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/index.html">Home</a>
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Car%20Buying%20Guides.html">Car Buying Guides</a>
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Inspection%20Tools.html">Inspection Tools</a>
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Expert%20Advise.html">Expert Advise</a>
-         <a href="file:///C:/Users/MSI_LCL/Documents/KODEGO/MP1-%20Car%20Buyer's%20Compass%20Website/Sign-up%20Form.html">Sign-up Form</a>
+         <a href="index.html">Home</a>
+         <a href="Car Buying Guides.html">Car Buying Guides</a>
+         <a href="Inspection Tools.html">Inspection Tools</a>
+         <a href="Expert Advise.html">Expert Advise</a>
+         <a href="Sign-up Form.html">Sign-up Form</a>
     </div>
 
     </br>
