modified:   Inspection Tools.html

--- a/Inspection Tools.html
+++ b/Inspection Tools.html
@@ -128,7 +128,7 @@
                 <li> Tires (tread depth, condition) </li>
                 <li> Wheels and rims </li>
                 <li> Lights (headlights, taillights, turn signals) </li>
-                <li> Bumpers and trim </li>
+                <li> Bumpers and trims </li>
             </ul>
         </div>
 </br></br></br></br>
